--- a/inst/doc/samroc-ex.bib
+++ b/inst/doc/samroc-ex.bib
@@ -15,6 +15,38 @@
   OPTannote = 	 {}
 }
 
+@article{kegg:2000,
+author = {Kanehisa, Minoru and Goto, Susumu},
+title = {{KEGG: Kyoto Encyclopedia of Genes and Genomes}},
+journal = {Nucl. Acids Res.},
+volume = {28},
+number = {1},
+pages = {27-30},
+doi = {10.1093/nar/28.1.27},
+year = {2000},
+abstract = {KEGG (Kyoto Encyclopedia of Genes and Genomes) is a knowledge base for systematic analysis of gene functions, linking genomic information with higher order functional information. The genomic information is stored in the GENES database, which is a collection of gene catalogs for all the completely sequenced genomes and some partial genomes with up-to-date annotation of gene functions. The higher order functional information is stored in the PATHWAY database, which contains graphical representations of cellular processes, such as metabolism, membrane transport, signal transduction and cell cycle. The PATHWAY database is supplemented by a set of ortholog group tables for the information about conserved subpathways (pathway motifs), which are often encoded by positionally coupled genes on the chromosome and which are especially useful in predicting gene functions. A third database in KEGG is LIGAND for the information about chemical compounds, enzyme molecules and enzymatic reactions. KEGG provides Java graphics tools for browsing genome maps, comparing two genome maps and manipulating expression maps, as well as computational tools for sequence comparison, graph comparison and path computation. The KEGG databases are daily updated and made freely available (http://www.genome.ad.jp/kegg/ ).
+},
+URL = {http://nar.oxfordjournals.org/cgi/content/abstract/28/1/27},
+eprint = {http://nar.oxfordjournals.org/cgi/reprint/28/1/27.pdf}
+}
+
+@article{lutian:2005,
+author = {Tian, Lu and Greenberg, Steven A. and Kong, Sek Won and Altschuler, Josiah and Kohane, Isaac S. and Park, Peter J.},
+title = {{Discovering statistically significant pathways in expression profiling studies}},
+journal = {PNAS},
+volume = {102},
+number = {38},
+pages = {13544-13549},
+doi = {10.1073/pnas.0506577102},
+year = {2005},
+abstract = {Accurate and rapid identification of perturbed pathways through the analysis of genome-wide expression profiles facilitates the generation of biological hypotheses. We propose a statistical framework for determining whether a specified group of genes for a pathway has a coordinated association with a phenotype of interest. Several issues on proper hypothesis-testing procedures are clarified. In particular, it is shown that the differences in the correlation structure of each set of genes can lead to a biased comparison among gene sets unless a normalization procedure is applied. We propose statistical tests for two important but different aspects of association for each group of genes. This approach has more statistical power than currently available methods and can result in the discovery of statistically significant pathways that are not detected by other methods. This method is applied to data sets involving diabetes, inflammatory myopathies, and Alzheimer's disease, using gene sets we compiled from various public databases. In the case of inflammatory myopathies, we have correctly identified the known cytotoxic T lymphocyte-mediated autoimmunity in inclusion body myositis. Furthermore, we predicted the presence of dendritic cells in inclusion body myositis and of an IFN-{alpha}/{beta} response in dermatomyositis, neither of which was previously described. These predictions have been subsequently corroborated by immunohistochemistry.
+},
+URL = {http://www.pnas.org/cgi/content/abstract/102/38/13544},
+eprint = {http://www.pnas.org/cgi/reprint/102/38/13544.pdf}
+}
+
+
+
 @Book{robin:2001,
   ALTauthor = 	 {various},
   editor = 	 {J. Paul Robinson},
@@ -87,23 +119,19 @@ DOI = {http://dx.doi.org/10.1186/1471-2105-5-125},
 }
 
 
-@Article{	  golubetal,
-  author	= {T. R. Golub and D. K. Slonim and P. Tamayo and C. Huard
-		  and M. Gaasenbeek and J. P. Mesirov and H. Coller and M.L.
-		  Loh and J. R. Downing and M. A. Caligiuri and C. D.
-		  Bloomfield and E. S. Lander},
-  title		= {Molecular classification of cancer: class discovery and
-		  class prediction by gene expression monitoring},
-  journal	= {Science},
-  year		= {1999},
-  optkey	= {},
-  volume	= {286},
-  optnumber	= {},
-  optmonth	= {},
-  pages		= {531--537},
-  optnote	= {},
-  optannote	= {}
+@article{golubetal,
+author = {Golub, T. R. and Slonim, D. K. and Tamayo, P. and Huard, C. and Gaasenbeek, M. and Mesirov, J. P. and Coller, H. and Loh, M. L. and Downing, J. R. and Caligiuri, M. A. and Bloomfield, C. D. and Lander, E. S.},
+title = {{Molecular Classification of Cancer: Class Discovery and Class Prediction by Gene Expression Monitoring}},
+journal = {Science},
+volume = {286},
+number = {5439},
+pages = {531-537},
+doi = {10.1126/science.286.5439.531},
+year = {1999},
+URL = {http://www.sciencemag.org/cgi/content/abstract/286/5439/531},
+eprint = {http://www.sciencemag.org/cgi/reprint/286/5439/531.pdf}
 }
+
 
 @Article{ broberg:2005,
 AUTHOR = {Broberg, Per},
