--- a/inst/doc/samroc-ex.bib
+++ b/inst/doc/samroc-ex.bib
@@ -49,18 +49,15 @@
   OPTannote = 	 {}
 }
 
-@Article{broberg:2003,
-  author = 	 {Per Broberg},
-  title = 	 {Statistical methods for ranking differentially expressed genes},
-  journal = 	 {Genome Biology},
-  year = 	 {2003},
-  OPTkey = 	 {},
-  OPTvolume = 	 {4},
-  OPTnumber = 	 {6:R41},
-  OPTpages = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+@Article{ broberg:2003,
+AUTHOR = {Broberg, P},
+TITLE = {Statistical methods for ranking differentially expressed genes},
+JOURNAL = {Genome Biology},
+VOLUME = {4},
+YEAR = {2003},
+PAGES = {R41},
+URL = {http://genomebiology.com/2003/4/6/R41},
+DOI = {http://dx.doi.org/10.1186/gb-2003-4-6-r41},
 }
 
 @Article{efron:2001,
@@ -77,19 +74,18 @@
   OPTannote = 	 {}
 }
 
+
+
 @Article{aubert:2004,
-  author = 	 {J Aubert and A Bar-Hen and J-J Daudin and S Robin},
-  title = 	 {Determination of the differentially expressed genes in microarray experiments using local FDR},
-  journal = 	 {BMC Bioinformatics},
-  year = 	 {2004},
-  OPTkey = 	 {},
-  OPTvolume = 	 {5},
-  OPTnumber = 	 {1},
-  OPTpages = 	 {125},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+AUTHOR = {Aubert, J and Bar-Hen, A and Daudin, JJ and Robin, S},
+TITLE = {Determination of the differentially expressed genes in microarray experiments using local FDR},
+JOURNAL = {BMC Bioinformatics},
+VOLUME = {5},
+YEAR = {2004},
+PAGES = {125},
+DOI = {http://dx.doi.org/10.1186/1471-2105-5-125},
 }
+
 
 @Article{	  golubetal,
   author	= {T. R. Golub and D. K. Slonim and P. Tamayo and C. Huard
@@ -109,16 +105,19 @@
   optannote	= {}
 }
 
-@Unpublished{	  broberg:2004,
-  author	= {Per Broberg},
-  title		= {A comparative review of estimates of the proportion unchanged genes and the false discovery rate},
-  note		= {submitted, preprint available at the {\tt http://home.swipnet.se/pibroberg/expression\_hemsida1.html}},
-  optkey	= {},
-  optmonth	= {},
-  year		= {2004},
-  optannote	= {}
+@Article{ broberg:2005,
+AUTHOR = {Broberg, Per},
+TITLE = {A comparative review of estimates of the proportion unchanged genes and the false discovery rate},
+JOURNAL = {BMC Bioinformatics},
+VOLUME = {6},
+YEAR = {2005},
+NUMBER = {1},
+PAGES = {199},
+URL = {http://www.biomedcentral.com/1471-2105/6/199},
+DOI = {http://dx.doi.org/10.1186/1471-2105-6-199},
+ISSN = {1471-2105},
+ABSTRACT = {BACKGROUND:In the analysis of microarray data one generally produces a vector of p-values that for each gene give the likelihood of obtaining equally strong evidence of change by pure chance. The distribution of these p-values is a mixture of two components corresponding to the changed genes and the unchanged ones. The focus of this article is how to estimate the proportion unchanged and the false discovery rate (FDR) and how to make inferences based on these concepts. Six published methods for estimating the proportion unchanged genes are reviewed, two alternatives are presented, and all are tested on both simulated and real data. All estimates but one make do without any parametric assumptions concerning the distributions of the p-values. Furthermore, the estimation and use of the FDR and the closely related q-value is illustrated with examples. Five published estimates of the FDR and one new are presented and tested. Implementations in R code are available.RESULTS:A simulation model based on the distribution of real microarray data plus two real data sets were used to assess the methods. The proposed alternative methods for estimating the proportion unchanged fared very well, and gave evidence of low bias and very low variance. Different methods perform well depending upon whether there are few or many regulated genes. Furthermore, the methods for estimating FDR showed a varying performance, and were sometimes misleading. The new method had a very low error.CONCLUSION:The concept of the q-value or false discovery rate is useful in practical research, despite some theoretical and practical shortcomings. However, it seems possible to challenge the performance of the published methods, and there is likely scope for further developing the estimates of the FDR. The new methods provide the scientist with more options to choose a suitable method for any particular experiment. The article advocates the use of the conjoint information regarding false positive and negative rates as well as the proportion unchanged when identifying changed genes.},
 }
-
 
 @Unpublished{	  efron:2004,
   author	= {Bradley Efron},
